--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,9 @@
 # SPDX-License-Identifier: ISC
 #
-# Copyright (c) 2023 Johnathan C. Maudlin <jcmdln@gmail.com>
+# Copyright (c) 2024 Johnathan C. Maudlin <jcmdln@gmail.com>
 
 [tox]
-envlist =
-    mypy
-    ruff
-    ansible-lint
+envlist = mypy,ruff,ansible-lint
 ignore_basepython_conflict = true
 isolated_build = true
 minversion = 3.20
@@ -34,6 +31,4 @@ deps = mypy
 commands =
     ruff --version
     ruff check --diff {toxinidir}/plugins/modules/
-deps =
-    black
-    ruff
+deps = ruff
