--- a/.github/workflows/galaxy.yml
+++ b/.github/workflows/galaxy.yml
@@ -1,13 +1,12 @@
 # SPDX-License-Identifier: ISC
 #
-# Copyright (c) 2023 Johnathan C. Maudlin <jcmdln@gmail.com>
+# Copyright (c) 2024 Johnathan C. Maudlin <jcmdln@gmail.com>
 ---
 name: Release
 
 on:
   push:
-    tags:
-      - "*"
+    tags: ["*"]
 
 jobs:
   release:
@@ -17,8 +16,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+        with: { python-version: "3.11" }
 
       - name: Install Ansible
         run: pip install ansible-core
