--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,20 +1,16 @@
 # SPDX-License-Identifier: ISC
 #
-# Copyright (c) 2023 Johnathan C. Maudlin <jcmdln@gmail.com>
+# Copyright (c) 2024 Johnathan C. Maudlin <jcmdln@gmail.com>
 ---
 name: lint
 
 on:
   pull_request:
-    branches:
-      - "**"
-    paths-ignore:
-      - "**.md"
+    branches: ["**"]
+    paths-ignore: ["**.md"]
   push:
-    branches:
-      - "**"
-    paths-ignore:
-      - "**.md"
+    branches: ["**"]
+    paths-ignore: ["**.md"]
   workflow_dispatch:
 
 jobs:
@@ -27,7 +23,7 @@ jobs:
       matrix:
         linter: [ansible-lint, mypy, ruff]
         os: [ubuntu-latest]
-        python: ["3.9", "3.10", "3.11"]
+        python: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v3
