--- a/playbooks/python.yml
+++ b/playbooks/python.yml
@@ -1,25 +1,21 @@
 # SPDX-License-Identifier: ISC
 #
-# Copyright (c) 2023 Johnathan C. Maudlin <jcmdln@gmail.com>
+# Copyright (c) 2024 Johnathan C. Maudlin <jcmdln@gmail.com>
 ---
-- name: Check
+- name: Python
+  hosts: "{{ target | default('all') }}"
+
+  any_errors_fatal: true
   gather_facts: false
-  hosts: all
 
   handlers:
     - name: Install Python
       ansible.builtin.raw: pkg_add python3
 
   tasks:
-    - name: Confirm host is running OpenBSD
-      ansible.builtin.raw: uname
-      changed_when: false
-      failed_when: ("OpenBSD" not in uname.stdout)
-      register: uname
-
     - name: Check if Python 3.x is present
-      ansible.builtin.raw: command -v python3
       changed_when: not python_check or python_check.rc > 0
       failed_when: false
       notify: Install Python
       register: python_check
+      ansible.builtin.raw: command -v python3
