--- a/.editorconfig
+++ b/.editorconfig
@@ -21,3 +21,8 @@ tab_width = 2
 [*.{ansible-,yaml}lint]
 indent_size = 2
 tab_width = 2
+
+[roles/*/templates/**/*.conf.j2]
+indent_size = 4
+indent_style = "tab"
+tab_width = 4
