--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ skip_install = true
 [testenv:ansible-lint]
 commands =
     ansible-lint --version
-    ansible-lint -v --offline --project-dir {toxinidir}
+    ansible-lint -v --project-dir {toxinidir}
 deps = ansible-lint
 
 [testenv:mypy]
