--- a/roles/mail/defaults/main.yml
+++ b/roles/mail/defaults/main.yml
@@ -2,14 +2,20 @@
 #
 # Copyright (c) 2024 Johnathan C. Maudlin <jcmdln@gmail.com>
 ---
-mail_aliases_root: root
-mail_dkim_selector: domain
-mail_domain: domain.tld
 mail_packages:
   - dovecot
   - dovecot-pigeonhole
-  - opensmtpd-filter-dkimsign
+  - opensmtpd-filter-rspamd
   - py3-cryptography
+  - rspamd--hyperscan
+
+#
+# Domain
+#
+
+mail_aliases_root: root
+mail_dkim_selector: domain
+mail_domain: domain.tld
 
 #
 # SSL
