mail: Add Redis for Rspamd

--- a/roles/mail/tasks/main.yml
+++ b/roles/mail/tasks/main.yml
@@ -118,6 +118,16 @@
     name: rspamd
     state: started
 
+- name: Enable redis
+  ansible.builtin.service:
+    name: rspamd
+    enabled: true
+
+- name: Start redis
+  ansible.builtin.service:
+    name: rspamd
+    state: started
+
 #
 # OpenSMTPD
 #
