--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
 //
 // Copyright (c) 2024 Johnathan C. Maudlin <jcmdln@gmail.com>
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.defaultFormatter": "prettier.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.wordWrap": "on",
 
@@ -35,7 +35,7 @@
   // Extensions
   //
 
-  "ansible.python.interpreterPath": "python",
+  "ansible.python.interpreterPath": "/bin/python",
 
   "evenBetterToml.formatter.columnWidth": 100,
   "evenBetterToml.formatter.reorderKeys": true,
@@ -64,9 +64,9 @@
   // Languages
   //
 
-  "[json]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
-  "[jsonc]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
-  "[markdown]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+  "[json]": { "editor.defaultFormatter": "prettier.prettier-vscode" },
+  "[jsonc]": { "editor.defaultFormatter": "prettier.prettier-vscode" },
+  "[markdown]": { "editor.defaultFormatter": "prettier.prettier-vscode" },
 
   "[python]": {
     "editor.codeActionsOnSave": {
@@ -75,5 +75,5 @@
     "editor.defaultFormatter": "charliermarsh.ruff"
   },
 
-  "[yaml]": { "editor.defaultFormatter": "esbenp.prettier-vscode" }
+  "[yaml]": { "editor.defaultFormatter": "prettier.prettier-vscode" }
 }
